# COILA

./: .gitignore  CMakeLists.txt  COMMIT.md  CONTRIBUTING.md  Doxyfile.in  FRAMEWORK.md  LICENSE  README.md  meson.build
examples/: hello_world.coil
include/: coil_assembler.h  coil_internal.h  coil_utils.h  lltcoila.h
include/coil/: binary.h  instructions.h  memory_model.h  types.h
include/coil-assembler/: assembler.h  config.h  diagnostics.h  target.h  version.h
src/: coil_assembler.c  coil_binary_parser.c  coil_utils.c  coil_virtual_map.c  coilbuf.c  coilbuf.h  config.c  config.h  main.c  main.cpp  optimizer.c  optimizer.h  sstream.c  sstream.h
src/api/: assembler_api.c  config_api.c  target_api.c
src/binary/: cof.cpp  cof.h  section.cpp  section.h  symbol.cpp  symbol.h
src/codegen/: code_generator.c  instruction_selector.c  register_allocator.c
src/core/: assembler.c  binary_parser.c  binary_parser.h  config.h  config_loader.c  defs.h  instruction.cpp  instruction.h  instruction_decoder.c  instruction_decoder.h  native_generator.c  native_generator.h  operand.cpp  operand.h  optimization.c  optimization.h  optimizer.h  register.cpp  register.h  target_config.c  target_config.h  target_registry.c  translator.c  translator.h  type.cpp  type.h  variable.cpp  variable.h
src/core/ir/: instruction.h
src/cpu/: x86_map.c
src/optimizer/: optimizer.c  pass_manager.c
src/parser/: lexer.cpp  lexer.h  parser.cpp  parser.h
src/targets/cpu/: optimizer.c  optimizer.h  x86.c  x86.h
src/targets/cpu/x86/: translator.h
src/targets/x86/: x86_generator.c  x86_generator.h  x86_optimizer.c  x86_optimizer.h  x86_translator.c  x86_translator.h
src/util/: diagnostic.cpp  diagnostic.h  logger.cpp  logger.h  source_location.cpp  source_location.h
src/utils/: error_handling.c  error_handling.h  logging.c  logging.h  memory.c  memory_management.c  memory_management.h
targets/template/: README.md  abi.c  instruction_mapping.c  meson.build  optimizations.c  target.c  template.h
targets/x86_64/: abi.c  instruction_mapping.c  meson.build  optimizations.c  x86_64.h  x86_64_target.c
test/: CMakeLists.txt  test_instruction.cpp  test_lexer.cpp  test_main.cpp  test_parser.cpp
tests/: test_binary_parser.c  test_framework.h  test_main.c  test_optimization.c  test_x86_translator.c
tests/integration/: meson.build
tests/unit/: meson.build
